Install tailwindcss prettier plugin and format all files

--- a/src/index.css
+++ b/src/index.css
@@ -47,5 +47,5 @@
 
 /* Link styling */
 .link {
-  @apply text-brand-300 transition-colors hover:text-brand-200 underline decoration-brand-300/50 hover:decoration-brand-200;
+  @apply text-brand-300 hover:text-brand-200 decoration-brand-300/50 hover:decoration-brand-200 underline transition-colors;
 }
